; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vp9dsp_template.c_vert_16x16_c.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vp9dsp_template.c_vert_16x16_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32*)* @vert_16x16_c to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vert_16x16_c(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %16 = load i32*, i32** %5, align 8
  store i32* %16, i32** %9, align 8
  %17 = load i32*, i32** %8, align 8
  store i32* %17, i32** %10, align 8
  %18 = load i32*, i32** %10, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  %20 = call i32 @AV_RN4PA(i32* %19)
  store i32 %20, i32* %11, align 4
  %21 = load i32*, i32** %10, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 4
  %23 = call i32 @AV_RN4PA(i32* %22)
  store i32 %23, i32* %12, align 4
  %24 = load i32*, i32** %10, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 8
  %26 = call i32 @AV_RN4PA(i32* %25)
  store i32 %26, i32* %13, align 4
  %27 = load i32*, i32** %10, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 12
  %29 = call i32 @AV_RN4PA(i32* %28)
  store i32 %29, i32* %14, align 4
  %30 = load i32, i32* %6, align 4
  %31 = sext i32 %30 to i64
  %32 = udiv i64 %31, 4
  %33 = trunc i64 %32 to i32
  store i32 %33, i32* %6, align 4
  store i32 0, i32* %15, align 4
  br label %34

34:                                               ; preds = %58, %4
  %35 = load i32, i32* %15, align 4
  %36 = icmp slt i32 %35, 16
  br i1 %36, label %37, label %61

37:                                               ; preds = %34
  %38 = load i32*, i32** %9, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 0
  %40 = load i32, i32* %11, align 4
  %41 = call i32 @AV_WN4PA(i32* %39, i32 %40)
  %42 = load i32*, i32** %9, align 8
  %43 = getelementptr inbounds i32, i32* %42, i64 4
  %44 = load i32, i32* %12, align 4
  %45 = call i32 @AV_WN4PA(i32* %43, i32 %44)
  %46 = load i32*, i32** %9, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 8
  %48 = load i32, i32* %13, align 4
  %49 = call i32 @AV_WN4PA(i32* %47, i32 %48)
  %50 = load i32*, i32** %9, align 8
  %51 = getelementptr inbounds i32, i32* %50, i64 12
  %52 = load i32, i32* %14, align 4
  %53 = call i32 @AV_WN4PA(i32* %51, i32 %52)
  %54 = load i32, i32* %6, align 4
  %55 = load i32*, i32** %9, align 8
  %56 = sext i32 %54 to i64
  %57 = getelementptr inbounds i32, i32* %55, i64 %56
  store i32* %57, i32** %9, align 8
  br label %58

58:                                               ; preds = %37
  %59 = load i32, i32* %15, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %15, align 4
  br label %34

61:                                               ; preds = %34
  ret void
}

declare dso_local i32 @AV_RN4PA(i32*) #1

declare dso_local i32 @AV_WN4PA(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
